--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
             </div>
 
             <div class="credit">
-                <a href="#">&copy <span>BSC</span></a>
+                <a href="#">&copy <span>2022 Blaire deSouza</span></a>
             </div>
 
         </div>
