--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3>find your perfect home</h3>
             
             <div class="inputBox">
-                <input type="search" id="hsearch" placeholder="Enter an address, neighborhood, city or ZIP code">
+                <input type="search" id="search-input" placeholder="Enter an address, neighborhood, city or ZIP code">
                 <i class="fa fa-search search-icon"></i>
             </div>
         </form>
@@ -93,7 +93,7 @@
 
         <h1 class="heading"><span>featured</span> properties </h1>
 
-        <div class="box-container">
+        <div class="fbox-container">
 
             <div class="box">
                 <div class="image-container">
