search parameter update and footer link added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h3>find your perfect home</h3>
             
             <div class="inputBox">
-                <input type="search" id="search-input" placeholder="Enter an address, neighborhood, city or ZIP code">
+                <input type="search" id="search-input" placeholder="Enter state (use two character state abbreviation)">
                 <i class="fa fa-search search-icon"></i>
             </div>
         </form>
@@ -120,7 +120,7 @@
             <div class="icons">
                 <img src="images/icon3.jpg" alt="Location Icon">
                 <h3>office address</h3>
-                <p>jersey city, NJ, 070003</p>
+                <p>jersey city, NJ, 07003</p>
             </div>
         </div>
 
@@ -165,7 +165,7 @@
                     <h3>quick links</h3>
                     <a href="#">home</a>
                     <a href="#">services</a>
-                    <a href="#">feature</a>
+                    <a href="#">featured</a>
                     <a href="#">contact</a>
                 </div>
 
@@ -186,7 +186,7 @@
             </div>
             
             <div class="credit">
-                <a href="www.blairedesouza.com">&copy <span>Blaire deSouza 2022</span></a>
+                <a href="www.blairedesouza.com" target="_blank">&copy <span>Blaire deSouza 2022</span></a>
             </div>
 
         </div>
