--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
         </div>
     </section>
 
+
     <!--Script-->
-    <script src="./js/index.js"></script>
+    <script type="text/javascript" src="./js/config.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
 </body>
 </html>
