--- a/src/searchList.html
+++ b/src/searchList.html
@@ -95,6 +95,6 @@
     </section>
 
     <!--Script-->
-    <script src="./js/index.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
 </body>
 </html>
