get data using axios to fix deployment issues

--- a/src/index.html
+++ b/src/index.html
@@ -194,6 +194,6 @@
 
 
     <!--Script-->
-    <script type="module" src="./js/index.js"></script>
+    <script type="text/javascript" src="./js/index.js"></script>
 </body>
 </html>
